--- a/style.css
+++ b/style.css
@@ -1,3 +1,58 @@
-body {
-    background-color: lightblue;
+@font-face {
+  font-family: Manrope, sans-serif;
+   src: url("assets/fonts/Manrope.ttf");
+ }
+
+ @media (max-width: 768px) {
+  .section {
+    width: 100%;
   }
+}
+
+ body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-list {
+  list-style: none;
+}
+
+.nav-link {
+  padding: 0 20px;
+  line-height: 50px;
+  transition: .3s;
+}
+
+
+.main-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 50%;
+}
+
+.avatar {
+  height: 250px;
+  width: auto;
+}
+
+
+
